--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^7.6.0",
     "morgan": "^1.10.0",
     "node": "^21.2.0",
+    "nodemon": "^3.0.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "rotating-file-stream": "^3.2.0"
